# news-to-obsidian

./: AGENTS.md  config.example.yaml  pyproject.toml
src/news_to_obsidian/: __init__.py  cli.py  config.py  freshrss.py  llm.py  obsidian.py
